# rust_tg_bot

./: .env  .gitignore  3  Cargo.toml  Dockerfile  \  docker-compose.yaml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
mongodb-init/: init.json
src/: main.rs  test.rs
src/funcs/: mod.rs
src/functions/: mod.rs
src/misc/: mod.rs
