[package]
name = "rust_tg_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = [
  "macros",
  "redis-storage",
  "bincode-serializer",
] }
serde = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }

[alias]
ID = "328277442"
